# astrbot_plugin_minesentinel

./: .gitignore  README.md  __init__.py  _conf_schema.json  download_qq.py  main.py  metadata.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  rust-wheels.yml
data/: cmd_config.json
optimized_files/: optimization.patch
optimized_files/optimized_files/handlers/: binding_commands.py  custom_commands.py  server_query_commands.py
optimized_files/optimized_files/services/: binding.py  message_bridge.py  renderer.py
optimized_files/optimized_files/services/mine_sentinel/: observation_priority.py
optimized_files/optimized_files/services/rendering/: avatar.py  cards.py  fonts.py
optimized_files/optimized_files/tests/: test_binding_commands.py
platform/: adapter.py
rust/: Cargo.toml
rust/src/: codec.rs  dialogue_terms.rs  lib.rs  observation_priority.rs  runtime_hints.rs
services/: __init__.py  session_targets.py
services/mine_sentinel/: alerts.py  anomaly_detector.py  dispatch.py  hourly_summary.py  io_executor.py  issue_formatting.py  models.py  observation_priority.py  report_artifacts.py  runtime_log.py  service.py  template_miner.py
services/mine_sentinel/reporting/: __init__.py  ai_diagnosis.py  ai_issue_review.py  ai_normalizer.py  ai_prompt.py  ai_summary.py  dialogue.py  dialogue_terms.py  image_renderer.py  incident_format.py  incidents.py  labels.py  presentation.py  reporter.py  rules.py  sampling.py  sections.py  text_renderer.py
services/mine_sentinel/storage/: __init__.py  codec.py  jsonl_store.py  offset_index.py  paths.py  window.py
services/rendering/: __init__.py  fonts.py  image.py
tests/: mine_sentinel_rs_stub.py  test_mine_sentinel.py
(+9 files in other folders)
