[package]
name = "mine_sentinel_rs"
version = "0.1.0"
edition = "2021"
description = "Rust core for MineSentinel runtime-log audit (PyO3 bindings)"
license = "MIT"
publish = false

[lib]
name = "mine_sentinel_rs"
crate-type = ["cdylib"]

[dependencies]
# PyO3 0.29 原生支持 CPython 3.14。extension-module 模式产出 .so/.pyd。
pyo3 = { version = "0.29", features = ["extension-module"] }
blake2 = "0.10"
# In-Rust JSON serialization: removes the per-record PyO3 → json.dumps callback
# (was the dominant cost in json_line / compact_value's fallback path).
# `preserve_order` makes serde_json::Map backed by IndexMap, so iteration
# matches Python dict insertion order — required by compact_dict which takes
# the first N keys by insertion order.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
